# mesmerize-core

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  batch_utils.py  environment.yml  environment_rtd.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_rtd.txt  setup.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: conda-windows.yaml  conda-windows.yml  linux-conda.yml  linux-pip.yml  macos-conda.yml  pypi-publish.yml  python-app.yml  python-package-conda.yml  windows-conda.yml
.pixi/envs/: README.txt
algorithms/: __init__.py  cnmf.py  cnmfe.py
caiman_extensions/: cnmf.py  common.py
docs/source/: conf.py  examples.rst  index.rst  user_guide.rst  visualization.rst
docs/source/_templates/: class_page_toc.html
docs/source/api/: cnmf.rst  common.rst  extensions.rst  functions.rst  index.rst  mcorr.rst
mesmerize_core/: VERSION  __init__.py  batch_utils.py  movie_readers.py  utils.py
mesmerize_core/algorithms/: __init__.py  _utils.py  cnmf.py  cnmfe.py  mcorr.py
mesmerize_core/arrays/: __init__.py  _base.py  _cnmf.py  _tiff.py  _video.py  mongo.py
mesmerize_core/caiman_extensions/: __init__.py  _batch_exceptions.py  _cnmf_arrays.py  _pynapple.py  _utils.py  cache.py  cnmf.py  common.py  mcorr.py  movie_readers.py
notebooks/: cnmf_eval.ipynb  cnmf_viz.ipynb  cnmfe.ipynb  mcorr_cnmf.ipynb  simple.ipynb
tests/: params.py  test_core.py
tests/ground_truths/: spatial_contours.npy  spatial_masks.npy  temporal_components.npy
(+8 files in other folders)
